--- a/requirements.txt
+++ b/requirements.txt
@@ -85,6 +85,7 @@ pybind11==2.11.1
 pycparser==2.21
 Pygments==2.16.1
 pyparsing==3.1.1
+pyswip @ git+https://github.com/yuce/pyswip@59016e0841f56177d1b18ec08fd9b67792bd0a97
 python-dateutil==2.8.2
 python-json-logger==2.0.7
 pytz==2023.3.post1
